Update konveksfunktion.tex, Konvekse_maengder.tex, and 2 more files...

--- a/fig/tikz/geometri/konveksfunktion.tex
+++ b/fig/tikz/geometri/konveksfunktion.tex
@@ -15,6 +15,6 @@
 \filldraw [black] (9.56,5.74,0) circle (2pt) node[above] {$\mathbf{u}_2$};
 %
 \end{tikzpicture}
-  \captionof{figure}{En konveks funktion markeret med blå, hvor $\mathbf{u}_1$ er et globalt maksimum, og en ikke-konveks funktion markeret med rød, hvor $\mathbf{u}_2$ er et lokalt maksimum.}
+  \captionof{figure}{En konveks funktion markeret med blå, hvor $\mathbf{u}_1$ er et globalt minimum, og en ikke-konveks funktion markeret med rød, hvor $\mathbf{u}_2$ er et lokalt minimum.}
   \label{fig:julieerkonge}
 \end{center}
