--- a/incl/main/simplex_metoden/geometrisktilgang.tex
+++ b/incl/main/simplex_metoden/geometrisktilgang.tex
@@ -244,7 +244,8 @@ Se \citep[Side 86]{bert}.\\\\
 %Der findes dermed mulige løsninger, hvis objektfunktion har lavere værdi end $\textbf{x}$'s, ved at bevæge sig i denne retning, hvormed $\textbf{x}$ ikke er optimal. 
 %\end{enumerate}
 %
-Dermed er alle basale retninger, for en basal mulig løsning, mulige retninger, hvis problemet er givet uden degenererede løsninger. 
+Dermed er alle basale retninger, for en basal mulig løsning, mulige retninger, hvis problemet er givet uden degenererede løsninger.
+For ikke-degenererede problemer bevæger simplexmetoden sig dermed fra et ekstremumspunkt til et af dets tilstødende ekstremumspunkter og forbedrer omkostningen.
 Heraf defineres en \textit{optimal basismatrix}, for at have optimale betingelser i forbindelse med simplexmetoden.
 %
 % Definition 3.3 
