--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -104,11 +104,11 @@ for ethvert $\textbf{u}, \textbf{v} \in \R^n$ og ethvert $\lambda \in [0,1]$.
 \end{defn}
 \noindent
 % 
-Hvis $f(\mathbf{u}) \leq f(\mathbf{v})$ i nærheden af $\mathbf{u}$, siges $\mathbf{u}$ at være et \textit{lokalt minimum} af $f$, og $\mathbf{u}$ siges at være et \textit{globalt minimum}, hvis det gælder  $f(\mathbf{u}) \leq f(\mathbf{v})$ for alle $\mathbf{v} \in \R^n$.
+Hvis $f(\mathbf{u}) \leq f(\mathbf{v})$ for $\textbf{v}$ i nærheden af $\mathbf{u}$, siges $\mathbf{u}$ at være et \textit{lokalt minimum} af $f$, og $\mathbf{u}$ siges at være et \textit{globalt minimum}, hvis det gælder  $f(\mathbf{u}) \leq f(\mathbf{v})$ for alle $\mathbf{v} \in \R^n$.
 Konvekse funktioner har dermed ikke et lokalt minimum, som ikke er et globalt minimum.
 På figur \ref{fig:julieerkonge} ses to funktioner. 
-En blå konveks funktion, hvor $\mathbf{u}_1$ er et globalt maksimum, da $f(\mathbf{u}_1) \leq f(\mathbf{v})$ for alle $\mathbf{v}$, 
-og en rød funktion, hvor $\mathbf{u}_2$ er et lokalt maksimum, da $f(\mathbf{u}_2) \leq f(\mathbf{v})$ for i nærheden af $\mathbf{u}_2$. 
+En blå konveks funktion, hvor $\mathbf{u}_1$ er et globalt minimum, da $f(\mathbf{u}_1) \leq f(\mathbf{v})$ for alle $\mathbf{v}$, 
+og en rød funktion, hvor $\mathbf{u}_2$ er et lokalt minimum, da $f(\mathbf{u}_2) \leq f(\mathbf{v})$ for i nærheden af $\mathbf{u}_2$. 
 %
 \input{fig/tikz/geometri/konveksfunktion}
 %
