--- a/fig/tikz/geometri/konveksfunktion.tex
+++ b/fig/tikz/geometri/konveksfunktion.tex
@@ -8,11 +8,11 @@
 %
 % Punkter og linje 
 % -------------------------------------------------------
-\draw[very thick, color = myblue] (1,3,0) .. controls (4,8,0) .. (7,3,0);
-\draw[very thick, color=myred] (9,5,0) .. controls (10,8,0) and (11,1,0) .. (12,3,0);
-\draw[very thick, color=myred] (15,5,0) .. controls (14,8,0) .. (12,3,0);
-\filldraw [black] (4,6.76,0) circle (2pt) node[above] {$\mathbf{u}_1$};
-\filldraw [black] (9.56,5.74,0) circle (2pt) node[above] {$\mathbf{u}_2$};
+\draw[ultra thick, color = myblue] (1,9,0) .. controls (4,5,0) .. (7,9,0);
+\draw[ultra thick, color=myred] (9,8,0) .. controls (10,5,0) and (11,12,0) .. (12,8,0);
+\draw[ultra thick, color=myred] (12,8,0) .. controls (13,4,0) .. (14,8,0);
+\filldraw [black] (4,6,0) circle (2pt) node[above] {$\mathbf{u}_1$};
+\filldraw [black] (9.56,7.25,0) circle (2pt) node[above] {$\mathbf{u}_2$};
 %
 \end{tikzpicture}
   \captionof{figure}{En konveks funktion markeret med blå, hvor $\mathbf{u}_1$ er et globalt minimum, og en ikke-konveks funktion markeret med rød, hvor $\mathbf{u}_2$ er et lokalt minimum.}
