Update apend_a.tex, Konvekse_maengder.tex, and 2 more files...

--- a/incl/main/appendicer/apend_a.tex
+++ b/incl/main/appendicer/apend_a.tex
@@ -55,7 +55,7 @@ Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdann
 \end{thm}
 %
 \begin{proof}
-I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform.\\\\
+%I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform.\\\\
 Lad $A$ være en matrix og $A_R$ være den reducerede trappeform af $A$. 
 Jævnfør \ref{lem:denderlort}(a) gælder det, at en søjle i $A_R$ er en pivotsøjle i $A_R$, hvis og kun hvis den er en ikke-nulsøjle og ikke er en linearkombination af de forudgående pivotsøjler i $A_R$. 
 Jævnfør \ref{thm:redutrap} gælder det, at hvis en søjle i $A_R$ er en pivotsøjle, så er den ikke en linearkombination af de forudgående søjler i $A_R$ og deraf er søjlen i $A$ heller ikke en linearkombination af de forudgående  søjler i $A$, hvilket betyder at positionerne af pivotsøjlerne i $A_R$ er entydigt bestemt af søjlerne i $A$. 
