--- a/incl/main/simplex_metoden/konstruktion_metod.tex
+++ b/incl/main/simplex_metoden/konstruktion_metod.tex
@@ -15,8 +15,8 @@ der opfylder, at $\mathbf{x} + \theta^* \mathbf{d}$ er en mulig løsning.
 % Nu kan vi eventuelt udelede \theta^* xD 
 Herefter beregnes omkostningsvektoren for den nye mulige løsning, og samme procedure gentages.
 Dette forsættes, indtil ingen basale retninger reducerer omkostningen, og en optimal løsning er fundet.
-\textcolor{red}{
-Den løsning der traverseres fra forlader hermed basen og den nye basale mulige løsning indtræder i basen og de tidligere basale variable bliver dermed inaktive.}
+%\textcolor{red}{
+%Den løsning, der traverseres fra, forlader hermed basen og den nye basale mulige løsning indtræder i basen og de tidligere basale variable bliver dermed inaktive.}
 % og de tidligere basale variable bliver til ikke-basale variable.
 %\\\\
 % Vi kan eventuelt her beskrive kort med ord den formel som bliver brugt i den naive implimentering 
