--- a/incl/misc/abstract.tex
+++ b/incl/misc/abstract.tex
@@ -1,8 +1,9 @@
 % incl/misc/abstract.tex : projektets abstract
 % ------------------------------------------------------------------------------
 % Et abstract er et kort resume af rapporten, som vises på titelbladet
-This paper contains an examination on linear programming problems and their geometrical solutions in relation to the simplex method. 
+This paper contains an examination of linear programming problems and their geometrical solutions in relation to the simplex method. 
 The paper contains a theoretical introduction to linear algebra together with important definitions and theorems related to this field of study. 
-Afterwards the solution of linear programming problems and notations are introduced, which leads into the geometrical representation of  linear programming problems through polyhedrons. Here it is proven that an optimal solutions exists in a corner of such a geometrical figure.
-Lastly the report provides a link between the use of the simplex method, which is a solution algorithm for linear programming problems, and the geometrical representation, aswell as the practical application of this.
-Different implementations of the simplex method are illustrated her aswell and discussed in regards to their time complexity. 
+Afterwards the solution of linear programming problems and notations are introduced, which leads into the geometrical representation of linear programming problems through polyhedrons.
+In this chapter it is proven that an optimal solution exists in a corner of such a geometrical figure.
+Lastly the report provides a link between the use of the simplex method, which is a solution algorithm for linear programming problems, and the geometrical representation, as well as the practical application of this.
+Different implementations of the simplex method are illustrated as well and discussed in regards to their time complexity. 
