Update optimering.tex, loesning_til_lineaer.tex, and kompleksitet.tex

--- a/incl/main/grafisk_losning/optimering.tex
+++ b/incl/main/grafisk_losning/optimering.tex
@@ -85,4 +85,4 @@ Så er den optimale omkostning lig $- \infty$, eller også findes en optimal lø
 \end{kor}
 \noindent
 %
-Bemærk, at der kan laves ækvivalente sætninger, såfremt objektfunktionen skulle maksimeres.
+Bemærk, at der kan opstilles ækvivalente sætninger, såfremt objektfunktionen skulle maksimeres.
