--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -30,7 +30,7 @@ Rækkeoperationerne kan udføres, når ligningssystemet er skrevet som en matrix
 % Hvis vi bruger tilde skal den kommenteres hær
 %
 \begin{eks}\label{eks1}
-Først laves ombytning mellem $R_1$ og $R_3$ i matricen. 
+Først ombyttes rækkerne $R_1$ og $R_3$ i matricen. 
 \begin{align*}
 \begin{blockarray}{ccc}
 \begin{block}{[ccc]}
@@ -69,7 +69,7 @@ Derefter skaleres $R_2$ med $-2$.
 \end{blockarray}
 \end{align*}
 %
-Slutteligt laves en udskiftning på $R_3$, hvor skaleringen $3R_1$ adderes med $R_3$. 
+Slutteligt udskiftes $R_3$ med skaleringen $3R_1$, adderet med $R_3$. 
 %
 \begin{align*}
 \begin{blockarray}{ccc}
@@ -171,7 +171,7 @@ A_R=
 på reduceret trappeform.
 \end{eks}
 %
-Et lineært ligningssystem, som ikke står på trappeform, kan laves om til trappeform og derefter reduceret trappeform, hvilket gør løsningen af systemet mere simpel.
+Et lineært ligningssystem, som ikke står på trappeform, kan omdannes til trappeform og derefter reduceret trappeform, hvilket gør løsningen af systemet mere simpel.
 Metoden til at gøre dette ses i afsnit \ref{gauss}.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
