Update P2_Procesanalyse.pdf, Procesanalyse seneste.doc, and 6 more files...

--- a/Mega nice ting hehe/praes_eks.tex
+++ b/Mega nice ting hehe/praes_eks.tex
@@ -2,7 +2,7 @@
 \usetheme{Boadilla}
 \title{Lineære programeringsproblemer}
 \subtitle{Gemetri og simplex}
-\author{c303c}
+\author{B303c}
 \institute{Aalborg Universitet}
 \date{\today}
 
@@ -22,7 +22,7 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \item Matrixsum og skalering.
 \item Transponering.
 \item Linearkombinationer.
-\item matrix-vektorprodukt og matrixmultiplakation.
+\item Matrix-vektorprodukt og matrixmultiplakation.
 \end{itemize}
 \end{frame}
 
@@ -44,8 +44,8 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \frametitle{Simplex}
 \begin{itemize}
 \item Hvordan simplex afsøger hjørnepunkter.
-\item implementationer af simplex(tænker kort gennemgang af forskelle)
-\item gennemgang af fuld tabelimplementering (mere udførligt).
+\item Implementationer af simplex(tænker kort gennemgang af forskelle)
+\item Gennemgang af fuld tabelimplementering (mere udførligt).
 \item Lexicografi til valg af pivoteringsmetode.
 \item Kompleksitet som udgangspunkt for valg af metode.
 \end{itemize}
