--- a/CSB/EPG2/fig/tikz/julieerdejligsimpsons.tex
+++ b/CSB/EPG2/fig/tikz/julieerdejligsimpsons.tex
@@ -15,7 +15,7 @@
 %
 % Funktion
 % ------------------------------------------------------
-\filldraw[thick,color=AAUred!15] (a) -- (c) -- (b) -- (0.7,0.3) -- (0.1,0.3) -- (a);
+\filldraw[thick,color=AAUred!15] (a) .. controls (0.26,0.55) .. (c) .. controls (0.55,0.39) .. (b) -- (0.7,0.3) -- (0.1,0.3) -- (a);
 \draw[very thick, color=AAUblue2] (a) .. controls (0.3,0.8) and (0.6,0.1) .. (b);  
 %
 %
