--- a/CSB/EPG2/incl/main/11.tex
+++ b/CSB/EPG2/incl/main/11.tex
@@ -32,6 +32,11 @@ Polynomiet dannet af midtpunktsreglen er givet ved
 \begin{align*}
 P_{M}(x)=f(\frac{a+b}{2}) \cdot 1, x \in \left [a,b  \right ].
 \end{align*}
+\\
+Fejlleddet for midtpunktsreglen er givet ved 
+\begin{align*}
+\int_{a}^{b}f(x)dx-(b-a)f(\frac{(a+b)}{2})=\frac{(b-a)h^2}{24}{f}''(\xi_M)
+\end{align*}
 På figur \ref{fig:midtpunkt} ses en illustration af midtpunktsreglen. 
 \input{fig/tikz/julieerdejligmidt}
 
@@ -54,6 +59,11 @@ Det interpolerende polynomium fundet via trapezreglen er givet ved
 \begin{align*}
 P_{T}(x)=f(a)\frac{x-b}{a-b}+f(b)\frac{x-a}{b-a}       
 \end{align*}
+\\
+Fejlleddet for trapezreglen er givet ved 
+\begin{align*}
+\int_{a}^{b}f(x)dx-\frac{b-a}{2}\left [ f(a)+f(b) \right ]=-\frac{(b-a)h^2}{12}{f}''(\xi_T)
+\end{align*}
 På figur \ref{fig:trapez} ses et eksempel på trapezreglen. 
 \input{fig/tikz/julieerdejligtrapez}
 
@@ -62,22 +72,22 @@ Simpsons regel er givet ved formlen
 \begin{align*}
 S_2 = \frac{(b-a)}{6}(f(a)+4f(\frac{a+b}{2})+f(b)=\frac{\widetilde{h}}{3}(f(a)+4f(\frac{a+b}{2})+f(b))
 \end{align*}
+\\
 Det interpolerende polynomium fundet via Simpsons regel er givet ved formlen
 \begin{align*}
 P_{S}(x)=f(a)\frac{(x-m)(x-b)}{(a-m)(a-b)}+f(m)\frac{(x-a)(x-b)}{(m-a)(m-b)}+f(b)\frac{(x-a)(x-m)}{(b-a)(b-m)}.
+\end{align*}
+\\
+Fejlleddet for Simpsons regel er givet ved 
+\begin{align*}
+\int_{a}^{b}f(x)dx-\frac{\Tilde{h}}{3}\left [ f(a)+4f(a+h) + f(b) \right ]=-\frac{(b-a)\Tilde{h}^4}{180}{f}^{(4)}(\xi_S)
 \end{align*} \\\\
 %%%%%Se video: https://www.youtube.com/watch?v=7MoRzPObRf0
 På figur \ref{fig:simpsons} ses et eksempel på Simpsons regel. 
 \input{fig/tikz/julieerdejligsimpsons}
 
 Graden af præcision $m$ for en interpolerende kvadraturregel er det største $n \in \mathbb{Z^+}$, således at formlen er præcis for $x^k$, for alle $k = 0, 1, \ldots , n$, men ikke for $n+1$.
-Midtpunktsreglen har eksempelvis en grad af præcision $m=1$, da den udregner integralet i et førstegradspolynomium, således at 
-\begin{align}
-    \int_{a}^{b} f(x) dx = \int_{a}^{b} p(x) dx.
-\end{align}
-Dette er ikke nødvendigvis tilfældet for andengradspolynomier, da $f(\frac{b+a}{2}$ ikke nødvendigvis er lig $\Bar{f}$. 
-Trapezreglens grad af præcision er ligeledes $m=1$ af lignende årsag som midtpunktsreglen: $f(\frac{(f(a)+f(b))}{2}$ er kun nødvendigvis lig $\Bar{f}$ for førstegradspolynomier. 
-
-Simpsons regel har grad af præcision $m=3$, da ?????
-% hvaffor??  hjælp mig, det pinnochio
+Ved at betragte fejlleddet for hver regel kan graden af præcision udledes trivielt. 
+Midtpunktsreglen og trapezreglen har begge grad af præcision $m=1$, da der i fejlleddet differentieres $2$ gange, hvormed fejlleddene for ethvert førstegradspolynomium er $0$. 
+En tilsvarende analyse af fejlleddet i Simpsons regel viser, at den har graden af præcision $m=3$.
 %
