--- a/Mega nice ting hehe/praes_eks.tex
+++ b/Mega nice ting hehe/praes_eks.tex
@@ -19,35 +19,72 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \begin{frame}
 \frametitle{Lineær Algebra}
 \begin{itemize}
+\item \textbf{$nr. 1$}
 \item Matrixsum og skalering.
 \item Transponering.
+\item Matrix-vektorprodukt og matrixmultiplikation.
 \item Linearkombinationer.
-\item Matrix-vektorprodukt og matrixmultiplakation.
+\item Span.
+\item Lineær uafhængighed.
+\item Underrum.
+%Kort om Matrixsum og skalering, Transponering Matrix-vektorprodukt og matrixmultiplakation.
 \end{itemize}
 \end{frame}
+%%
 
+\begin{frame}
+\frametitle{Lineære ligningssystemer}
+\begin{itemize}
+\item \textbf{$nr. 2$}
+\item Lineære ligningssystemer
+\item Rækkeoperationer (evt. elemtentærmaticer)
+\item Trappeform
+\item Gauss-elimination
+\item Rang og Nullitet
+%Kort om Rang og Nullitet
+\end{itemize}
+\end{frame}
+%
 \section{Løsninger og grafisk repræsentation}
-
+%
 \begin{frame}
 \frametitle{Løsning af lineære programeringsproblemer}
 \begin{itemize}
+\item \textbf{$nr. 3$}
 \item Intro til løsninger fra afsnit 2
-\item Polyedre og repræsentation(herunder standardform)
-\item Bevis for løsninger i hjørnepunkter
+%De fire punkter fra raporten (angående løsninger)
+\item Standardform.
 \item Eventuelt dualproblemer som sidebemærkning. Hvis vi skal have det med måske en bemærkning om spilteori og nulsum(slackvariable løsning for dual).
+\item Polyedre og repræsentation(herunder standardform)
 \item Det konvekse hylster.
+\item Injektiv og surjektiv (bijektiv)
+\item Lokal $\rightarrow$ Global (omkring fig 3.9)
 \end{itemize}
 \end{frame}
-
-
+%
+\begin{frame}
+\frametitle{Hjørner}
+\begin{itemize}
+\item \textbf{$nr. 4$}
+\item Ekstremumspunkter, hjørnepunkter og basale mulige løsninger
+\item Sæt 3.4 ækvivalens mellem hjørnepunkterne
+\item Bevis for løsninger i hjørnepunkter (3.8)
+\item \textbf{$nr. 5$}
+\item Bevis for løsninger i hjørnepunkter (3.9)
+\item Outro $\rightarrow$ hjørnepunkter og simplex
+\end{itemize}
+\end{frame}
+%
 \begin{frame}
 \frametitle{Simplex}
 \begin{itemize}
 \item Hvordan simplex afsøger hjørnepunkter.
+\item \textbf{$nr. 6$}
 \item Implementationer af simplex(tænker kort gennemgang af forskelle)
-\item Gennemgang af fuld tabelimplementering (mere udførligt).
+\item Gennemgang af fuld tabelimplementering (mere udførligt (eksempel)).
 \item Lexicografi til valg af pivoteringsmetode.
 \item Kompleksitet som udgangspunkt for valg af metode.
+\item Afrunding / konklusion?!
 \end{itemize}
 \end{frame}
 
@@ -55,7 +92,9 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \begin{frame}
 \frametitle{Proces(hvis vi gider)}
 \begin{itemize}
+\item Er der mere tid? Har Horia lyst til at høre på det? Nej
 \item Projektarbejde i cornaens tidsalder.
+\item En flot tegning
 \end{itemize}
 \end{frame}
 
