Update praes_eks.pdf, praes_eks.tex, and 23 more files...

--- a/Mega nice ting hehe/praes_eks.tex
+++ b/Mega nice ting hehe/praes_eks.tex
@@ -76,10 +76,33 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \end{frame}
 %
 \begin{frame}
-\frametitle{Simplex}
+\frametitle{Simplexmetoden}
 \begin{itemize}
 \item Hvordan simplex afsøger hjørnepunkter.
-\item \textbf{$nr. 6$}
+\end{itemize}
+\end{frame}
+%     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     %%%%%                           %%%%%
+%     %%%%%      Person nummer 6      %%%%%
+%     %%%%%                           %%%%%
+%     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\begin{frame}
+%\frametitle{Simplexmetoden}
+%\begin{itemize}
+%\item Hvordan simplex afsøger hjørnepunkter.
+%\item \textbf{$nr. 6$}
+%\item Implementationer af simplex(tænker kort gennemgang af forskelle)
+%\item Gennemgang af fuld tabelimplementering (mere udførligt (eksempel)).
+%\item Lexicografi til valg af pivoteringsmetode.
+%\item Kompleksitet som udgangspunkt for valg af metode.
+%\item Afrunding / konklusion?!
+%\end{itemize}
+%\end{frame}
+%
+\begin{frame}
+\frametitle{Simplexmetoden}
+\begin{itemize}
 \item Implementationer af simplex(tænker kort gennemgang af forskelle)
 \item Gennemgang af fuld tabelimplementering (mere udførligt (eksempel)).
 \item Lexicografi til valg af pivoteringsmetode.
@@ -87,7 +110,7 @@ Forestiller mig umiddelbart der er flest på der fremligger under løsning(hvor 
 \item Afrunding / konklusion?!
 \end{itemize}
 \end{frame}
-
+%
 
 \begin{frame}
 \frametitle{Proces(hvis vi gider)}
