Update 3.9.tex and Simplexmetoden.tex

--- a/Presentation/Frames/3.9.tex
+++ b/Presentation/Frames/3.9.tex
@@ -6,3 +6,17 @@
 \item Outro $\rightarrow$ hjørnepunkter og simplex
 \end{itemize}
 \end{frame}
+
+\section{Simplexmetoden}
+\begin{frame}
+\centering
+\Huge
+Simplexmetoden
+\end{frame}
+%
+\begin{frame}
+\frametitle{Simplexmetoden}
+\begin{itemize}
+\item Hvordan simplex afsøger hjørnepunkter.
+\end{itemize}
+\end{frame}
