Update 1_4_c_1_8 _noter.py, bisect.py, and 5 more files...

--- a/CSB/EPG2/incl/main/12.tex
+++ b/CSB/EPG2/incl/main/12.tex
@@ -4,7 +4,7 @@
 \begin{color}{AAUblue2}
 %
 \textbf{Opgavebeskrivelse:} 
-Forklar id´een i en sammensat kvadraturregel. Udled den sammensatte kvadraturregel
+Forklar idéen i en sammensat kvadraturregel. Udled den sammensatte kvadraturregel
 $T_N$.
 % 
 \end{color}
