Update Del1.tex, Del13.tex, and 12 more files...

--- a/CSB/EPG1/Presentation/Frames/Del1.tex
+++ b/CSB/EPG1/Presentation/Frames/Del1.tex
@@ -14,3 +14,8 @@ Del 1: Det hængende kabel
 %%
 \input{Frames/Del11.tex}
 \input{Frames/Del12.tex}
+\input{Frames/Del13.tex}
+\input{Frames/Del14a.tex}
+\input{Frames/Del14b.tex}
+\input{Frames/Del14c.tex}
+\input{Frames/Del14d.tex}
