--- a/CSB/EPG2/Presentation/Frames/Del2.tex
+++ b/CSB/EPG2/Presentation/Frames/Del2.tex
@@ -5,10 +5,10 @@
 Del 2: Numerisk løsning af differentialligninger
 \end{frame}
 %
-\begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
-\end{frame}
-%%
+\input{Frames/Del21.tex}
+\input{Frames/Del21_2.tex}
+\input{Frames/Del22.tex}
+\input{Frames/Del23.tex}
+\input{Frames/Del23a.tex}
+\input{Frames/Del23b.tex}
+\input{Frames/Del23c.tex}
