Update Del1.tex, Del13.tex, and 5 more files...

--- a/CSB/EPG1/Presentation/Frames/Del14b.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14b.tex
@@ -1,6 +1,9 @@
 \begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
+\frametitle{Sekantmetoden}
+$$\begin{array}{l|c|c}
+\text{Metode} & \text{Resultat} & \text{Iterationer}\\
+\hline
+\text{Newton}		& 189.94865 & 7\\
+\text{Sekant}		& 189.94865 & 9
+\end{array}$$
 \end{frame}
