--- a/CSB/EPG1/Presentation/Frames/Del14d.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14d.tex
@@ -1,6 +1,17 @@
 \begin{frame}
-\frametitle{Overskrift}
+\frametitle{Nulpunktbestemmelse}
 \begin{itemize}
-\item Fisk
+%\item $\lambda \text{cosh} \left( \frac{75}{\lambda} \right) = \lambda + 15$
+\item Tolerance $1\cdot10^{-12}$
 \end{itemize}
+\phantom{H} \\
+\centering
+$$\begin{array}{l|c|c}
+\text{Metode} & \text{Resultat} & \text{Iterationer}\\
+\hline
+\text{Bisektion}	& 189.94865 & 46\\
+\text{Newton}		& 189.94865 & 7\\
+\text{Sekant}		& 189.94865 & 9\\
+\text{Integrations}	& 189.94865 & 345
+\end{array}$$
 \end{frame}
