--- a/CSB/EPG1/Presentation/Frames/Del1.tex
+++ b/CSB/EPG1/Presentation/Frames/Del1.tex
@@ -2,15 +2,10 @@
 \begin{frame}
 \centering
 \Huge
-Del 1: Det hængende kabel
+Del 1: \\
+Det hængende kabel
 \end{frame}
 %
-\begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
-\end{frame}
 %%
 \input{Frames/Del11.tex}
 \input{Frames/Del12.tex}
