--- a/CSB/EPG1/Presentation/Frames/Del2.tex
+++ b/CSB/EPG1/Presentation/Frames/Del2.tex
@@ -2,7 +2,8 @@
 \begin{frame}
 \centering
 \Huge
-Del 2: Interpolation af funktioner
+Del 2: \\
+Interpolation af funktioner
 \end{frame}
 %
 \begin{frame}
