Update Del11.tex, Del14c.tex, and 6 more files...

--- a/CSB/EPG1/Presentation/Frames/Del11.tex
+++ b/CSB/EPG1/Presentation/Frames/Del11.tex
@@ -1,6 +1,24 @@
 \begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
+\frametitle{Grafer med forskellige $h_0$}
+
+\begin{figure}[h!]
+\includegraphics[scale=0.3]{img/fig1}
+\includegraphics[scale=0.3]{img/fig2}
+\caption{Det ses at en ændring fra $h_0=10$ til $h_0=20$ kun ændrer højden af kæden men ikke formen.}
+\end{figure}
 \end{frame}
+
+\begin{frame}
+\frametitle{Grafer med forskellige $\lambda$}
+
+\begin{figure}[h!]
+\includegraphics[scale=0.3]{img/fig3}
+\includegraphics[scale=0.3]{img/fig4}
+\caption{Det ses at en ændring fra $\lambda=2$ til $\lambda=1$ ændrer kædelinjen, både i forhold til højden af pælene og kædens hældning.}
+\end{figure}
+%
+
+\end{frame}
+
+
+
