--- a/CSB/EPG1/Presentation/Frames/Del14c.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14c.tex
@@ -1,6 +1,17 @@
 \begin{frame}
 \frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
+\center
+Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
+%
+\begin{align*}
+\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
+\lambda&=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})}
+\end{align*}
+ og
+\begin{align*}
+\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
+\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15 &=\lambda
+\end{align*}
+
+Første omksrivning virker ikke, mens anden kommer frem til en løsning, når de bruges i scriptsene.
 \end{frame}
