Update Del1.tex, Del2.tex, and 7 more files...

--- a/CSB/EPG2/Presentation/Frames/Del2.tex
+++ b/CSB/EPG2/Presentation/Frames/Del2.tex
@@ -2,7 +2,8 @@
 \begin{frame}
 \centering
 \Huge
-Del 2: Numerisk løsning af differentialligninger
+Del 2: \\
+Numerisk løsning af differentialligninger
 \end{frame}
 %
 \input{Frames/Del21.tex}
