--- a/CSB/EPG2/Presentation/Frames/Del23.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23.tex
@@ -1,6 +1,6 @@
 \begin{frame}
-\frametitle{Overskrift}
+\frametitle{System af differentialligninger}
 \begin{itemize}
-\item Fisk
+\item Eventuelt lidt om det konkrete eksempel
 \end{itemize}
 \end{frame}
