Update Del12.tex, Del14a.tex, and 35 more files...

--- a/CSB/EPG1/Presentation/Frames/Del12.tex
+++ b/CSB/EPG1/Presentation/Frames/Del12.tex
@@ -1,6 +1,17 @@
 \begin{frame}
-\frametitle{Overskrift}
+\frametitle{Formler}
 \begin{itemize}
-\item Fisk
+\item Højde ved søjler $$f\left(\frac{L}{2}\right)	= h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) = h$$
+\item Højde ved minimum $$f(0) =	 h_0 + \lambda 	\cosh (0)	= h_0 + \lambda = h-s$$
 \end{itemize}
+\end{frame}
+%
+\begin{frame}
+\frametitle{Udledning af ny formel}
+\begin{align*}
+h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) -\left(h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right)\right) &= h_0 + \lambda -(h_0 + \lambda)\\
+h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) - h &= h_0 + \lambda - (h - s)\\
+\lambda \cosh \left(\frac{L}{2 \lambda}\right) - h &= \lambda - h + s\\
+\lambda \cosh \left(\frac{L}{2 \lambda}\right) &= \lambda + s
+\end{align*}
 \end{frame}
