--- a/CSB/EPG1/Presentation/Frames/Del14a.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14a.tex
@@ -1,6 +1,14 @@
 \begin{frame}
-\frametitle{Overskrift}
+\frametitle{Nulpunktbestemmelse med bisektion og Newton}
 \begin{itemize}
-\item Fisk
+\item Bisektion finder altid et svar
+\item Newton funder hurtigt et svar
 \end{itemize}
+
+$$\begin{array}{l|c|c}
+\text{Metode} & \text{Resultat} & \text{Iterationer}\\
+\hline
+\text{Newton}		& 189.94865 & 7\\
+\text{Sekant}		& 189.94865 & 9
+\end{array}$$
 \end{frame}
