--- a/CSB/EPG2/Presentation/Frames/Del23c.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23c.tex
@@ -1,6 +1,11 @@
 \begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
+\frametitle{Vaccine Indførelse}
+\includegraphics[scale=0.295]{img/a1_b35_g5.png}
+\includegraphics[scale=0.295]{img/t_a1_b35_g5.png}
+\end{frame}
+%
+\begin{frame}
+\frametitle{Vaccine Indførelse}
+\includegraphics[scale=0.295]{img/a2_b35_g5.png}
+\includegraphics[scale=0.295]{img/t_a2_b35_g5.png}
 \end{frame}
